--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+    <a href="Hangman.html">Hangman</a>
 </body>
 </html>
