--- a/Hangman/Hangman.html
+++ b/Hangman/Hangman.html
@@ -35,6 +35,6 @@
       </div>
     </div>
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="Hangman.js"></script>
   </body>
 </html>
